support for generic collections working with lists